tests/cases/generics/errors/generic-signature-unknown-param.ari
fn consume[T](value: U) -> T {
  return value;
}

fn main() -> i64 {
  return 0;
}
